Adjust gap on body container to prevent overflow

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 25px;
+    gap: 15px;
 }
 .title {
     font-family: 'Alfa Slab One', cursive;
